----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-01-17 Robin Johnson  <robbat2@users.sourceforge.net>
    * lang/spanish-*.inc.php3: Updates, thanks to Daniel Hinostroza C.
    * lang/norwegian-*.inc.php3: Updates, thanks to Sven-Erik Andersen

2003-01-17 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_privileges.php3: Wrong label.
    * scripts/create-release.sh: Changed the CVS hostname to cvs1 because
      cvs1.sourceforge.net is now blocked for the SF shell servers, too. Note:
      The script now works on the SF shell servers ONLY!

2003-01-16 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/czech: Updated.
    * libraries/tbl_change.js, tbl_change.php3: Improved Ctrl+arrows moving in
      field editing.

2003-01-15 Robin Johnson  <robbat2@users.sourceforge.net>
    * lang/sort_lang.sh: Fix status output bug '\n'
    * db_details_importdocsql.php3: Move hardcoded strings to language files
    * lang/*.php3: Add new strings for docSQL importer
    * libraries/sqlvalidator.*.php3: Finish fixing bug #644709
    * Documentation.html: Revised FAQ entry about SQL Validator

2003-01-15 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/lithuanian-*.inc.php3: Updates, thanks to Vilius Zigmantas (viliusz).
    * lang/indonesian-*.inc.php3: Updates, thanks to Rachim Tamsjadi (tamsy).
    * lang/italian-*.inc.php3: Updates, thanks to Pietro Danesi (danone).
    * lang/polish-*.inc.php3: Updates, thanks to Jakub Wilk (ubanus).
    * lang/slovak-*.inc.php3: Updates, thanks to Lubos Klokner (erkac).

2003-01-15 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php3: feature: deleting a pdf page
    * libraries/sqlparser.lib.php3: bug 667317 (INTERVAL 10YEAR)
      , bug 667663 (ALTER TABLE tbl_name AUTO_INCREMENT = 1 )

2003-01-14 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_privileges.php3:
      - Lookup database / table lists if possible;