@@ -2207,6 +2207,14 @@ $cfg['PmaAbsoluteUri'] = (!empty($_SERVER['HTTPS']) ? 'https' : 'http') . '://'
     recent versions of the most browsers.
 </p>
 
+<p>
+    <b>[5.12] Apple OS X: Safari browser changes special characters to
+       &quot;?&quot;.</b>
+    <br />
+    This issue has been reported by a OS X user, who adds that Chimera,
+    Netscape and Mozilla do not have this problem.
+</p>
+
 <a name="faqusing"></a>
 <h3>[6. Using phpMyAdmin]</h3>
 <p>
