@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-01-17 Marc Delisle  <lem9@users.sourceforge.net>
+    * Documentation.html: faq 5.12 about OS X Safari problem
+
 2003-01-17 Robin Johnson  <robbat2@users.sourceforge.net>
     * lang/spanish-*.inc.php3: Updates, thanks to Daniel Hinostroza C.
     * lang/norwegian-*.inc.php3: Updates, thanks to Sven-Erik Andersen
